--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucas Portfolio</title>
     <link rel="stylesheet" href="/src/style/global.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Meu portfolio</h1>
+    <header>
+        <div class="img-nome">
+            <img src="" alt="">
+            <h1>Lucas</h1>
+        </div>
+    </header>
+
+    <main>
+        <div class="apresentacao">
+            <h1>Elias is a web designer and front-end developer</h1>
+            <p>He crafts responsive websites where technologies meet creativity</p>
+        </div>
+    </main>
 </body>
+
 </html>
