--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
 
 <body>
     <header>
-        <div class="img-nome">
-            <img src="" alt="">
-            <h1>Lucas</h1>
+        <div class="header-geral">
+            <div class="img-nome">
+                <img src="" alt="">
+                <h1>Lucas</h1>
+
+                <nav class="options">
+                    <a href="">#Home</a>
+                    <a href="">#works</a>
+                    <a href="">#about-me</a>
+                    <a href="">#contact</a>
+                </nav> <!-- options -->
+            </div>
         </div>
     </header>
-
     <main>
         <div class="apresentacao">
-            <h1>Elias is a web designer and front-end developer</h1>
-            <p>He crafts responsive websites where technologies meet creativity</p>
+            <div>
+                <h1>Elias is a web designer and front-end developer</h1>
+                <p>He crafts responsive websites where technologies meet creativity</p>
+                <button>Contact-Me</button>
+            </div>
+            <img src="" alt="">
         </div>
     </main>
 </body>
