--- a/index.html
+++ b/index.html
@@ -6,35 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lucas Portfolio</title>
     <link rel="stylesheet" href="/src/style/global.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/style/style.css">
 </head>
 
 <body>
     <header>
         <div class="header-geral">
-            <div class="img-nome">
-                <img src="" alt="">
-                <h1>Lucas</h1>
 
-                <nav class="options">
-                    <a href="">#Home</a>
-                    <a href="">#works</a>
-                    <a href="">#about-me</a>
-                    <a href="">#contact</a>
-                </nav> <!-- options -->
-            </div>
-        </div>
+            <div class="img-nome">
+
+                <img src="src/assets/images/icone.png" alt="">
+                <p>Lucas</p>
+
+            </div><!-- img-nome -->
+
+            <nav class="options">
+                <a href="">#Home</a>
+                <a href="">#Works</a>
+                <a href="">#About-me</a>
+                <a href="">#Contact</a>
+            </nav> <!-- options -->
+        </div><!-- header-geral -->
     </header>
     <main>
+
         <div class="apresentacao">
-            <div>
-                <h1>Elias is a web designer and front-end developer</h1>
+            <div class="apresentacao-info">
+                <h1>Lucas is a <span> web designer </span> and <span>front-end developer</span></h1>
                 <p>He crafts responsive websites where technologies meet creativity</p>
-                <button>Contact-Me</button>
-            </div>
-            <img src="" alt="">
+                <button>Contact me!!</button>
+            </div><!-- apresentacao-info -->
+
+            <img src="/src/assets/images/cara.png" alt="">
+        </div><!-- apresentacao -->
+
+        <div class="projects">
+            <h1>#Projects</h1>
+        </div>
+
+        <div class="skills">
+            <h1>#Skills</h1>
         </div>
     </main>
+
+    <footer>
+        <hr>
+        <div class="footer-geral">
+            <div class="footer-info">
+                <p>Lucas </p>
+                <p>lucassvswork@gmail.com</p>
+            </div>
+
+            <div class="footer-info2">
+                <p>Midia</p>
+            </div>
+        </div> <!-- footer-geral -->
+    </footer>
 </body>
 
 </html>
